--- a/shelby_backend/Cargo.toml
+++ b/shelby_backend/Cargo.toml
@@ -3,12 +3,11 @@ name = "shelby_backend"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-rusqlite = { version = "0.30", features = ["bundled"] }
+rusqlite = { version = "0.30", features = ["bundled", "chrono", "blob"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 paste = "1.0"
 concat-with = "0.2"
+ring = "0.17"
