--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 shelby_backend = { path = "shelby_backend" }
 rocket = { version = "0.5", features = ["json", "secrets"] }
 paste = "1.0"
+rocket_dyn_templates = { version = "0.1", features = ["tera"] }
 
 [workspace]
 members = ["shelby_backend"]
