--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ shelby_backend = { path = "shelby_backend" }
 rocket = { version = "0.5", features = ["json", "secrets"] }
 paste = "1.0"
 rocket_dyn_templates = { version = "0.1", features = ["tera"] }
+serde = "*"
 
 [workspace]
 members = ["shelby_backend"]
